override the FOSUserBundle template

--- a/app/Resources/views/Layout/header.html.twig
+++ b/app/Resources/views/Layout/header.html.twig
@@ -4,7 +4,7 @@
         <!-- BEGIN LOGO -->
         <div class="page-logo">
             <a href="{{ path('scolarite_home') }}">
-                <img src="{{ asset('public/img/saiss.jpg') }}" height="22px" alt="logo FLS" class="logo-default" /> </a>
+                <img src="{{ asset('bundles/scolarite/img/saiss.jpg') }}" height="22px" alt="logo FLS" class="logo-default" /> </a>
             <div class="menu-toggler sidebar-toggler">
             </div>
         </div>
