--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -51,9 +51,9 @@
 
     {% block theme_layout_stylesheets %}
         {% stylesheets
-            'bundles/scolarite/css/layout.css'
-            'bundles/scolarite/css/themes/default.css'
-            'bundles/scolarite/css/custom.css'
+            'bundles/scolarite/css/layout.min.css'
+            'bundles/scolarite/css/themes/default.min.css'
+            'bundles/scolarite/css/custom.min.css'
 
             filter='cssrewrite' output='css/compiled/layout_theme.css'
         %}
@@ -88,79 +88,54 @@
     <script src="{{ asset('bundles/scolarite/plugins/excanvas.min.js') }}"></script>
     <![endif]-->
     {% block javascripts %}
-        {% javascripts
-            'bundles/scolarite/plugins/jquery.min.js'
-            'bundles/scolarite/plugins/bootstrap/js/bootstrap.min.js'
-            'bundles/scolarite/plugins/js.cookie.min.js'
-            'bundles/scolarite/plugins/bootstrap-hover-dropdown/bootstrap-hover-dropdown.min.js'
-            'bundles/scolarite/plugins/jquery-slimscroll/jquery.slimscroll.min.js'
-            'bundles/scolarite/plugins/jquery.blockui.min.js'
-            'bundles/scolarite/plugins/bootstrap-switch/js/bootstrap-switch.min.js'
-            output='js/compiled/main.js'
-        %}
-            <script src="{{ asset_url }}"></script>
-        {% endjavascripts %}
+        <script src="{{ asset('bundles/scolarite/plugins/jquery.min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/bootstrap/js/bootstrap.min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/js.cookie.min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/bootstrap-hover-dropdown/bootstrap-hover-dropdown.min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/jquery-slimscroll/jquery.slimscroll.min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/jquery.blockui.min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/bootstrap-switch/js/bootstrap-switch.min.js') }}"></script>
     {% endblock %}
 
     {% block page_javascripts %}
-        {% javascripts
-        'bundles/scolarite/plugins/moment.min.js'
-        'bundles/scolarite/plugins/bootstrap-daterangepicker/daterangepicker.min.js'
-        'bundles/scolarite/plugins/morris/morris.min.js'
-        'bundles/scolarite/plugins/morris/raphael-min.js'
-        'bundles/scolarite/plugins/counterup/jquery.waypoints.min.js'
-        'bundles/scolarite/plugins/counterup/jquery.counterup.min.js'
-        'bundles/scolarite/plugins/amcharts/amcharts/amcharts.js'
-        'bundles/scolarite/plugins/amcharts/amcharts/serial.js'
-        'bundles/scolarite/plugins/amcharts/amcharts/pie.js'
-        'bundles/scolarite/plugins/amcharts/amcharts/radar.js'
-        'bundles/scolarite/plugins/amcharts/amcharts/themes/light.js'
-        'bundles/scolarite/plugins/amcharts/amcharts/themes/patterns.js'
-        'bundles/scolarite/plugins/amcharts/amcharts/themes/chalk.js'
-        'bundles/scolarite/plugins/amcharts/ammap/ammap.js'
-        'bundles/scolarite/plugins/amcharts/ammap/maps/js/worldLow.js'
-        'bundles/scolarite/plugins/amcharts/amstockcharts/amstock.js'
-        'bundles/scolarite/plugins/fullcalendar/fullcalendar.min.js'
-        'bundles/scolarite/plugins/horizontal-timeline/horozontal-timeline.min.js'
-        'bundles/scolarite/plugins/flot/jquery.flot.min.js'
-        'bundles/scolarite/plugins/flot/jquery.flot.resize.min.js'
-        'bundles/scolarite/plugins/flot/jquery.flot.categories.min.js'
-        'bundles/scolarite/plugins/jquery-easypiechart/jquery.easypiechart.min.js'
-        'bundles/scolarite/plugins/jquery.sparkline.min.js'
-        'bundles/scolarite/plugins/jqvmap/jqvmap/jquery.vmap.js'
-            output='js/compiled/page.js'
-        %}
-            <script src="{{ asset_url }}"></script>
-        {% endjavascripts %}
+        <script src="{{ asset('bundles/scolarite/plugins/moment.min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/bootstrap-daterangepicker/daterangepicker.min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/morris/morris.min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/morris/raphael-min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/counterup/jquery.waypoints.min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/counterup/jquery.counterup.min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/amcharts/amcharts/amcharts.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/amcharts/amcharts/serial.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/amcharts/amcharts/pie.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/amcharts/amcharts/radar.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/amcharts/amcharts/themes/light.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/amcharts/amcharts/themes/patterns.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/amcharts/amcharts/themes/chalk.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/amcharts/ammap/ammap.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/amcharts/ammap/maps/js/worldLow.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/amcharts/amstockcharts/amstock.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/fullcalendar/fullcalendar.min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/horizontal-timeline/horozontal-timeline.min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/flot/jquery.flot.min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/flot/jquery.flot.resize.min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/flot/jquery.flot.categories.min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/jquery-easypiechart/jquery.easypiechart.min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/jquery.sparkline.min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/plugins/jqvmap/jqvmap/jquery.vmap.js') }}"></script>
     {% endblock %}
 
     {% block theme_global_javascripts %}
-        {% javascripts
-            '/bundles/scolarite/js/app.js'
-            output='js/compiled/theme_global.js'
-        %}
-            <script src="{{ asset_url }}"></script>
-        {% endjavascripts %}
+        <script src="{{ asset('bundles/scolarite/js/app.min.js') }}"></script>
     {% endblock %}
 
     {% block page_level_javascripts %}
-        {% javascripts
-            'bundles/scolarite/js/dashboard.min.js'
-            output='js/compiled/page_level.js'
-        %}
-            <script src="{{ asset_url }}"></script>
-        {% endjavascripts %}
+        <script src="{{ asset('bundles/scolarite/js/dashboard.min.js') }}"></script>
     {% endblock %}
 
     {% block theme_layout_javascripts %}
-        {% javascripts
-            'bundles/scolarite/js/layout.min.js'
-            'bundles/scolarite/js/demo.min.js'
-            'bundles/scolarite/js/quick-sidebar.min.js'
-            output='js/compiled/theme_layout.js'
-        %}
-            <script src="{{ asset_url }}"></script>
-        {% endjavascripts %}
+        <script src="{{ asset('bundles/scolarite/js/layout.min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/js/demo.min.js') }}"></script>
+        <script src="{{ asset('bundles/scolarite/js/quick-sidebar.min.js') }}"></script>
     {% endblock %}
 </body>
 
